assets/scss/components/_header.scss
// The main menu
#wpc-2017-main-menu {
	background: $wpc-banner-bg-color;
	width: 100%;
	height: $wpc-menu-height;
	color: $wpc-header-color;

	a {
		color: inherit;
	}

	.wpc-toggle-menu {
		display: block;
		width: 100%;
		height: $wpc-menu-height;
		background: none;
		text-transform: uppercase;
		font-size: 1em;
		line-height: $wpc-menu-height;
		margin: 0;
		border: 0;
		padding: 0 20px;
		cursor: pointer;
		overflow: hidden;
		color: inherit;

		.open-menu-label,
		.close-menu-label {
			display: block;
			float: left;
			text-transform: uppercase;
			height: $wpc-menu-height;
			line-height: $wpc-menu-height;
		}

		.close-menu-label {
			display: none;
		}

		.toggle-icon {
			display: block;
			float: left;
			width: 22px;
			height: 18px;
			cursor: pointer;
			position: relative;
			margin: 15px 12px 0 0;

			.bar {
				background: rgba( #fff, 0.8 );
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 2px;
				margin: 0;
				opacity: 1;
				transition: all 200ms ease-out;

				&.two {
					margin-top: 8px;
				}

				&.three {
					margin-top: 16px;
				}
			}
		}
	}

	.social-media-icons {
		display: none;
	}

	.menu {
		@include reset-ul();
		display: none;
		height: auto;
		vertical-align: top;
		font-size: 17px;
		line-height: 20px;
		overflow: auto;
		text-align: center;

		& > li {
			display: block;

			a {
				display: block;
				padding: 5px 10px;
				text-transform: none;

				&:hover {
					background: darken( $wpc-banner-bg-color, 3% );
				}
			}

			& > a {
				padding: 15px 10px;
				text-transform: uppercase;
			}

			&.current {

				& > a {
					background: darken( $wpc-banner-bg-color, 8% );
					font-weight: bold;
				}
			}

			&.menu-item-has-children {

				.sub-menu {
					@include reset-ul();
					padding: 0 0 10px 0;
				}
			}
		}
	}

	&.wpc-menu-open {
		position: fixed;
		left: 0;
		top: 0;
		height: 100%;
		overflow: scroll;
		padding: 5px 0 15px 0;
		z-index: 10000;

		.wpc-toggle-menu {
			background: none;

			&:hover {
				background: none;
			}

			.toggle-icon {

				.bar {

					&.one {
						margin-top: 8px;
						transform: rotate(45deg);
					}

					&.two {
						opacity: 0;
					}

					&.three {
						margin-top: 8px;
						transform: rotate(-45deg);
					}
				}
			}

			.open-menu-label {
				display: none;
			}

			.close-menu-label {
				display: block;
			}
		}

		.menu {
			display: block;
		}
	}

	@media screen and (min-width: $wpc-menu-breakpoint) {
		display: none !important;
	}
}

#wpc-banner {
	display: none;
	background: $wpc-banner-bg-color;
	width: 100%;
	height: $wpc-banner-height;
	color: $wpc-banner-color;

	a {
		color: inherit;
	}

	> .inside {
		width: 1000px;
		overflow: auto;
	}

	ul {
		@include reset-ul();
		height: $wpc-banner-height;

		> li {
			display: block;
			float: left;
			height: $wpc-banner-height;
			line-height: $wpc-banner-height;
			opacity: 0.75;

			a {
				display: block;
				height: $wpc-banner-height;
				line-height: $wpc-banner-height;
			}

			&.current-menu-item,
			&.current-menu-ancestor,
			&.current_page_item,
			&:hover {
				background: darken( $wpc-banner-bg-color, 10% );
				opacity: 1;
			}
		}

		&.menu {
			float: left;

			> li {
				text-transform: uppercase;
				font-size: 12px;

				a {
					text-decoration: none;
					padding: 0 8px;
				}

				ul, ol {
					display: none;
				}
			}
		}

		&.social-media-icons {
			@include reset-ul();
			float: right;
			overflow: auto;
			text-align: center;
			margin: 10px 0;

			> li {
				display: inline-block;
				opacity: 0.75;

				img {
					display: block;
					height: $wpc-banner-height - 14px;
					margin: 0;
				}

				a {
					display: block;
					padding: 7px 8px 0 8px;
				}

				&:hover {
					opacity: 1;
				}
			}
		}
	}

	@media screen and (min-width: $wpc-menu-breakpoint) {
		display: block;
	}
}

#wpc-header {
	display: block;
	background: $wpc-header-bg;
	color: $wpc-header-color;
	padding: $wpc-header-vert-padding;
	border-top: 2px solid darken( $wpc-dark-blue, 5% );
	border-bottom: 2px solid #ddd;
	box-shadow: 0 0 15px 0 #333;
	text-align: center;
	width: 100%;
	height: $wpc-header-logo-height + ( $wpc-header-vert-padding * 2 );

	a {
		color: inherit;
	}

	> .inside {
		padding: 0;
	}

	.wpc-header-menu {
		display: none;
		height: $wpc-header-menu-height;
		color: inherit;
		text-align: left;

		.menu {
			@include reset-ul();
			display: block;
			overflow: visible;
			vertical-align: top;
			font-size: $wpc-header-menu-font-size;
			height: $wpc-header-menu-height;
			line-height: $wpc-header-menu-height;

			& > li {
				display: inline-block;
				height: $wpc-header-menu-height;
				line-height: $wpc-header-menu-height;

				& > a {
					display: block;
					padding: 0 10px;
					text-decoration: none;
					text-transform: uppercase;

					&:hover {
						background: darken( $wpc-header-bg, 3% );
					}
				}

				&.has-submenu {
					position: relative;

					& > .submenu {
						@include reset-ul();
						display: block;
						background: #fff;
						position: absolute;
						left: 4%;
						top: 90%;
						min-width: 92%;
						height: auto;
						line-height: 1.3;
						text-align: left;
						color: #222;
						padding: 10px 0;
						margin: 0;
						opacity: 0;
						transition: opacity ease-in 0.2s;

						& > li {
							height: auto;
							line-height: inherit;
							padding: 0;

							& > a {
								display: block;
								padding: 5px 10px;
								text-decoration: none;
							}

							&.current,
							& > a:hover {
								background: #eee;
							}
						}
					}

					&:hover {

						& > .submenu {
							opacity: 1;
						}
					}
				}

				&.current {

					& > a {
						background: darken( $wpc-header-bg, 8% );
						font-weight: bold;
					}
				}
			}
		}
	}

	.wpc-logo {
		display: block;
		background: url('../images/wpcampus-2017-logo-tagline-white.png') center center no-repeat;
		background-size: contain;
		width: 100%;
		height: $wpc-header-logo-height;
		margin: 0 auto;
		vertical-align: middle;
	}

	@media screen and (min-width: $wpc-menu-breakpoint) {

		.wpc-header-menu {
			display: block;
		}

		.wpc-header-left,
		.wpc-logo,
		.wpc-header-right {
			display: inline-block;
		}

		.wpc-header-left,
		.wpc-header-right {
			vertical-align: bottom;
		}

		.wpc-header-left {
			width: $wpc-header-left-width;
			padding-right: $wpc-header-logo-margin-side;
			text-align: right;
		}

		.wpc-header-right {
			width: $wpc-header-right-width;
			padding-left: $wpc-header-logo-margin-side;
			text-align: left;
		}

		.wpc-logo {
			background-size: $wpc-header-logo-width $wpc-header-logo-height;
			width: $wpc-header-logo-width;
		}
	}
}

